# git-cache-http-server

./: CMakeLists.txt  Jenkinsfile  README.md
etc/: gchsd.conf
etc/init.d/: gchsd
src/: Address.hpp  AskPass.cpp  Authentications.cpp  Authentications.hpp  CMakeLists.txt  HttpRequest.cpp  HttpRequest.hpp  Main.cpp  NamedMutex.cpp  NamedMutex.hpp  Settings.cpp  Settings.hpp  Worker.cpp  Worker.hpp
